# StrategyExecutionEngine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
Docker/: .erlang.cookie  kafka.yml  nats.yml  rabbitmq.yml  redis.yml
examples/: fully.rs  simple.rs
src/: config.rs  constants.rs  lib.rs
src/clients/: common_client.rs  kafka_client.rs  mod.rs  nats_client.rs  rabbitmq_client.rs  redis_client.rs  zeromq_client.rs
src/models/: child_orders.rs  common.rs  common_orders.rs  format.rs  mod.rs  orders.rs  parent_orders.rs
src/strategies/: common.rs  mod.rs
src/strategies/algo_based/: mod.rs  twap.rs  vwap.rs
src/strategies/dark_pool_based/: crossing_networks.rs  liquidity_aggregation.rs  mod.rs
src/strategies/inventory_based/: bid_ask_quoting.rs  hedging.rs  mod.rs
src/strategies/market_microstructure_based/: adverse_selection.rs  adverse_selection_impl.rs  adverse_selection_split.rs  liquidity_seeking.rs  mod.rs
src/strategies/technical_indicator_based/: bollingerbands.rs  heikin_ashi.rs  macd.rs  mod.rs  rsi.rs  stoc.rs
src/strategies/time_volume_based/: mod.rs  time_based_execution.rs  volume_based_execution.rs
tests/unit/: config_test.rs  mod.rs
tests/unit/config/: config_test.rs  mod.rs
tests/unit/models/: child_orders.rs  format_test.rs  mod.rs  orders_test.rs  parent_orders_test.rs
